--- a/software.html
+++ b/software.html
@@ -39,16 +39,20 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/zodiac/job/oRSrbfw5'>Zodiac Pool Systems LLC Careers - Software Engineer DevOps</a></h5> 
+<p><span class="badge badge-light">California</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325466002'>Job Application for Senior Software Engineer at Unite Us</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/uniteus/jobs/4373314002'>Job Application for Senior Software Engineer in Test at Unite Us</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oT3YafwO&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nF28pMwv'>Freedom Financial Network Careers - Senior Software Engineer FDR</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698613809-embedded-software-developer-sr-'>Bosch Group Embedded Software Developer Sr. | SmartRecruiters</a></h5> 
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://snap.hr/popsa/job/software-engineer-data-and-machine-learning/60f377ba6a24a9a49eb68e1758c26d4d/'>Software Engineer ? Data and Machine Learning at Popsa</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/popsa/job/software-engineer-data-and-machine-learning/60f377ba6a24a9a49eb68e1758c26d4d/'>Software Engineer ? Data and Machine Learning at Popsa</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -163,7 +167,7 @@
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
+<h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -175,7 +179,7 @@
 <p><span class="badge badge-light">Los Angeles, CA  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1552869'>Job Application for Software Engineering Immersive Instructor at General Assembly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1552869'>Job Application for Software Engineering Immersive Instructor at General Assembly</a></h5> 
 <p><span class="badge badge-light">Dallas, TX  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -199,7 +203,7 @@
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -223,7 +227,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIdaVfwK&k=Job&j=osxDafww&__jvst=Employee&__jvsd=s8vU5hwo&__jvsc=Twitter&bid=nMsMpMwG'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIdaVfwK&k=Job&j=osxDafww&__jvst=Employee&__jvsd=s8vU5hwo&__jvsc=Twitter&bid=nMsMpMwG'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -295,7 +299,7 @@
 <p><span class="badge badge-light">Krak?w Krak?w Krak?w</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Zooplus/743999698378309-software-engineer'>zooplus Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Zooplus/743999698378309-software-engineer'>zooplus Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -315,11 +319,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://olo.applytojob.com/apply/XNOlNGrSwN/Senior-Software-Engineer-In-Test'>Senior Software Engineer in Test - Olo - Career Page</a></h5> 
+<h5><a href='https://olo.applytojob.com/apply/XNOlNGrSwN/Senior-Software-Engineer-In-Test'>Senior Software Engineer in Test - Olo - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/imagentechnologies/jobs/4499310002'>Job Application for Staff Software Engineer - Data at Imagen Technologies</a></h5> 
+<h5><a href='https://boards.greenhouse.io/imagentechnologies/jobs/4499310002'>Job Application for Staff Software Engineer - Data at Imagen Technologies</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -436,10 +440,6 @@
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/sweetgreen/jobs/1939889'>Job Application for Senior Software Engineer, Data at  sweetgreen</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-software-engineer-7186'>Cyber Security Software Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
