--- a/machine.html
+++ b/machine.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lendbuzz/5fbce6f5-1c2a-41f8-92f5-424eec1ae960'>Lendbuzz - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/lendbuzz/5fbce6f5-1c2a-41f8-92f5-424eec1ae960'>Lendbuzz - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Boston  Boston</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -215,7 +215,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266263-computer-vision-machine-learning-engineer-engineering-center-cluj'>Bosch Group Computer Vision & Machine Learning Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266263-computer-vision-machine-learning-engineer-engineering-center-cluj'>Bosch Group Computer Vision & Machine Learning Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -297,7 +297,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/idtus/job/oG8obfw7'>Innovative Defense Technologies (IDT) Careers - Machine Learning Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/idtus/job/oG8obfw7'>Innovative Defense Technologies (IDT) Careers - Machine Learning Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -350,7 +350,7 @@ to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...
 Cambridge; Senior Manager, Outbound Marketing, ML San Jose (CA); Senior 
 Product?...</p>
 <hr/>
-<h5><a href='https://tensor-tech.join.com/jobs/449941-machine-learning-engineer'>Machine Learning ... | JOIN - Job @ Tensor Technologies (Zug)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensor-tech.join.com/jobs/449941-machine-learning-engineer'>Machine Learning ... | JOIN - Job @ Tensor Technologies (Zug)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
@@ -367,7 +367,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cruise/jobs/1919695?gh_jid=1919695'>Job Application for Senior Machine Learning Optimization Engineer ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cruise/jobs/1919695?gh_jid=1919695'>Job Application for Senior Machine Learning Optimization Engineer ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Cruise is looking for ML optimization engineers to help us invest in tools to 
 optimize deep learning models for efficient inference. These optimizations are?...</p>
@@ -423,13 +423,13 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://corti.recruitee.com/o/senior-machine-learning-researcher'>
+<h5><a href='https://corti.recruitee.com/o/senior-machine-learning-researcher'>
       Senior Machine Learning Researcher - Corti
     </a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697536835-machine-learning-engineer'>Mobica  Machine Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697536835-machine-learning-engineer'>Mobica  Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -437,7 +437,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.csiro.au/job/Brisbane%2C-QLD-Senior-Research-Scientist-Machine-Learning-for-Robotics/594982300/'>Senior Research Scientist - Machine Learning for Robotics</a></h5> 
+<h5><a href='https://jobs.csiro.au/job/Brisbane%2C-QLD-Senior-Research-Scientist-Machine-Learning-for-Robotics/594982300/'>Senior Research Scientist - Machine Learning for Robotics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
